--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-build
-dist
-node_modules
-package-lock.json
-logs
-public/upload/**/*.*
+.env
+/node_modules/*
+.idea/*
+/backup/*
 *.log
+build/
+tmp/
+temp/
+coverage/*
 .DS_Store
