--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "node backend server",
   "main": "./src/app.ts",
   "scripts": {
-    "start": "export PORT=3000 && gulp",
-    "build": "gulp build",
-    "eslint": "eslint --fix --ext .js,.ts src/",
-    "dev": "pm2 start process.yml",
-    "production": "pm2 start process.yml --env production",
-    "stop": "pm2 stop all"
+    "build": "tsc --build",
+    "start": "ts-node-dev src/server.ts",
+    "test": "NODE_ENV=test PORT=7788 jest",
+    "test:watch": "npm run test -- --watchAll"
   },
   "keywords": [
     "node",
@@ -21,35 +19,62 @@
   "author": "Jeff Zhong",
   "license": "MIT",
   "dependencies": {
-    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
-    "koa-body": "^4.2.0",
-    "koa-favicon": "^2.1.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-logger": "^3.1.0",
     "koa-router": "^9.1.0",
-    "koa-static": "^5.0.0",
-    "log4js": "^6.3.0",
-    "mysql": "^2.17.1",
-    "reflect-metadata": "^0.1.13",
-    "uuid": "^8.2.0"
+    "koa2-cors": "^2.0.5",
+    "redis": "^2.8.0",
+    "ts-node": "^3.3.0",
+    "typescript": "^3.5.2"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/koa": "^2.11.3",
-    "@types/koa-favicon": "^2.0.19",
-    "@types/koa-router": "^7.4.1",
-    "@types/koa-static": "^4.0.1",
-    "@types/mysql": "^2.15.8",
-    "@types/node": "^14.0.20",
-    "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
-    "del": "^5.1.0",
-    "eslint": "^7.4.0",
-    "gulp": "^4.0.2",
-    "gulp-nodemon": "^2.5.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.6"
+    "@types/redis": "^2.8.13",
+    "@types/jest": "^23.3.14",
+    "@types/koa": "^2.0.49",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.0.42",
+    "@types/koa2-cors": "^2.0.1",
+    "@types/node": "^10.14.12",
+    "@types/supertest": "^2.0.8",
+    "husky": "^1.3.1",
+    "jest": "^24.8.0",
+    "prettier": "1.15.1",
+    "pretty-quick": "^1.11.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^23.10.5",
+    "ts-node-dev": "^1.0.0-pre.40"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true,
+    "modulePathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "roots": [
+      "<rootDir>/__teests__"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
