--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Jeff Zhong",
   "license": "MIT",
   "dependencies": {
+    "class-validator": "^0.12.2",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
